--- a/app/globus_portal_framework/static/css/search.css
+++ b/app/globus_portal_framework/static/css/search.css
@@ -78,7 +78,7 @@ div.h-center {
   color: white;
 }
 
-#searchbutton {   /*, #download */
+#searchbutton { 
 	text-align:center;
 	border:1px solid #2a2c2f; -webkit-border-radius: 15px; -moz-border-radius: 15px;border-radius: 15px;font-size:16px;font-family:helvetica, sans-serif; padding: 5px 10px 5px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
 	background-color: #999; background-image: -webkit-gradient(linear, left top, left bottom, from(#45484d), to(#000000));
@@ -228,12 +228,9 @@ div.card {
 }
 .resultarea{
   grid-area:resultarea;
-/*  min-height:100px;
-  overflow: auto;
-  max-height: 90vh;   */
 }
 
-.resultscroll {
+.resultscrollarea {
   min-height:100px;
   max-height: 90vh;    
   overflow: auto;
