--- a/app/globus_portal_framework/templates/base.html
+++ b/app/globus_portal_framework/templates/base.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/search.css' %}" />
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/new-age.min.css' %}" />
     {# Custom Fonts #}
     <script type="text/javascript" src="{% static 'js/fontawesome-all.min.js' %}"></script>    
 
@@ -43,12 +43,32 @@
 
   </head>
   <body>
-<div id="pittlogo"><img src="/static/img/pitt.jpg" height="50px;"></div>
-<div class="jumbotron jumbotron-fluid text-center">
-  <h1>Aurora Breast Cancer</h1>
- <h3>Data Discovery Portal</h3>     
- <!-- <hr class="my-4">  creates a hz line-->
-</div>
+<header class="masthead2">
+    <div class="container h-75">
+      <div class="row h-75">
+        <div class="col-lg-9 my-auto">
+          <div class="header-content mx-auto">
+            <p class="text-left">&nbsp;</p>
+            <h3 class="mb-5 text-left">Data Discovery Portal</h3>
+          </div>
+        </div>
+        <div class="col-lg-5 my-auto">
+          <div class="device-container">
+            <div class="">
+              <div class="device">
+                <div class="screen">
+                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                <div class="button">
+                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header> 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/ddp"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
@@ -83,8 +103,6 @@
     {%block body%}
     {%endblock%}
 
-    <!-- Page footer -->
-    {% include 'components/footer.html' %}
     <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   </body>
