--- a/app/globus_portal_framework/templates/components/footer.html
+++ b/app/globus_portal_framework/templates/components/footer.html
@@ -1,3 +1,17 @@
 <!-- Footer -->
 <footer>
+	 <div class="footer">
+      <p>&copy; Aurora Project 2019. All Rights Reserved.</p>
+      <ul class="list-inline">
+        <li class="list-inline-item">
+          <a href="#">Privacy</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#">Terms</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#">FAQ</a>
+        </li>
+      </ul>
+    </div>
 </footer>
