--- a/app/globus_portal_framework/templates/base.html
+++ b/app/globus_portal_framework/templates/base.html
@@ -13,8 +13,13 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/search.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/new-age.min.css' %}" />
+
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/v4-shims.css">
+
     {# Custom Fonts #}
-    <script type="text/javascript" src="{% static 'js/fontawesome-all.min.js' %}"></script>    
+    <script type="text/javascript" src="{% static 'js/all.min.js' %}"></script>    
+
 
 <!-- bootstrap 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
