--- a/app/globus_portal_framework/search/templates/components/search-results.html
+++ b/app/globus_portal_framework/search/templates/components/search-results.html
@@ -23,7 +23,7 @@
   margin: 10px;
   padding: 0 10px;
   max-width: 90%;
-  border: 1px solid #444;
+  border: 3px solid #444;
   background: white;
 }
 
@@ -46,14 +46,20 @@ ul#horizontal-list li {
 
 figure.item {
   vertical-align: top;
-  display: inline-block;
+  display: inline-grid;
   text-align: center;
-  width: 220px;
+  width: 150px;
+}
+
+figcaption.caption {
+  font-size: x-small;
+  font-weight: bold;
+  font-family: Helvetica;
 }
 
 img {
-  width: 200px;
-  height: 200px;
+  width: 75px;
+  height: 75px;  
   background-color: grey;
   border: 1px solid #444;
 }
@@ -165,7 +171,21 @@ function getImageCount(sample_id) {
   return cnt;
 }
 
+/** get a thumbnail cope of the slide images - need this to be sync call**/
+function getImageThumbnail(image_file) {
+  var request = new XMLHttpRequest();
+  var  url = "http://localhost:5000/get_image_thumbnail/" + image_file
+  var resp = ""
 
+  request.open('GET', url, false);  // `false` makes the request synchronous
+  request.send(null);
+
+  if (request.status === 200) {
+    console.log(request.responseText);
+    resp = request.responseText;
+  }
+  return resp;
+}
 
 /* Get the slides names from the OpenSlide server and open an image gallery*/
 function getSlides(sample_id) {
@@ -185,14 +205,18 @@ function getSlides(sample_id) {
     var element = document.getElementById("image_list");    
     var images = response;
     var html = ""
+    var thumb = ""
 
     if (images.images.length > 0) {
       for (i=0; i < images.images.length; i++) {
+
+        thumb = getImageThumbnail(images.images[i])
+
         href = "http://localhost:5000/" + images.images[i]
         toks = images.images[i].split(".")
         
         html += "<figure class=\"item\">"
-        html += "<a href=\"" + href + "\" target=\"_blank\"><img src=\"/static/img/cell2.jpg\" width=\"50\" height=\"50\" align=\"center\"></a>";
+        html += "<a href=\"" + href + "\" target=\"_blank\"><img id=\"" + images.images[i] + "\" src=\"" + thumb + "\" width=\"50\" height=\"50\" align=\"center\"></a>";
         html +=  "<figcaption class=\"caption\">" + toks[0] + "</figcaption>"
         html += "</figure>"
       }
@@ -502,7 +526,8 @@ $(document).ready(function() {
 {% endfor %}
 <div id="imagegallery">
   <div style="text-align:center">
-    <h4>Whole Slide Images</h4>
+    <h4 style="color: black;">Whole Slide Images</h4>
+    <h2>Click on the image below to view slide</h2>
   </div>
    <div id="image_list">
     </div>
@@ -511,9 +536,13 @@ $(document).ready(function() {
     <div id="image_list">
     </div>
   </div>
--->
+
+    <img src="{{ search.img_str|safe }}">
+-->    
     <!-- Add content to the popup -->
     <!-- Add a button to close the popup (optional)     -->
-    <button class="imagegallery_close btn btn-dark btn-sm">Close</button>
+    <p style="text-align:center; display:block;">
+      <button class="imagegallery_close btn btn-dark btn-sm">Close</button>
+    </p>
   </div>
 </div>
