--- a/app/globus_portal_framework/search/templates/components/search-results.html
+++ b/app/globus_portal_framework/search/templates/components/search-results.html
@@ -45,12 +45,21 @@ ul#horizontal-list li {
 }
 
 figure.item {
-  vertical-align: top;
-  display: inline-grid;
-  text-align: center;
-  /*width: 150px;*/
-
+  /*width: 200px;*/
+    height:100px;
+    /* min-height: 120px; 
+    max-height: auto;
+    float: left;
+    */
+    margin: 3px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    vertical-align: middle;
+    text-align: center;
+    display:table-cell;
 }
+
 
 figcaption.caption {
   font-size: x-small;
@@ -58,12 +67,13 @@ figcaption.caption {
   font-family: Helvetica;
 }
 
+/*
 img {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 150px;
 }
+*/
 
 img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
@@ -94,22 +104,9 @@ function replaceEndStuff(p1) {
 
 var jsonstr = replaceSingleQuotes("{{search.search_results|safe}}")
 var image_map = replaceSingleQuotes("{{search.images|safe}}")
-var openslide_url = "{{request.session.search.openslide|safe}}"
-//console.log (typeof jsonstr)
+var openslide_url = "https://cbio.aurorabreastcancer.org/openslide"
+//var openslide_url = "https://openslide:5000"
 
-/*  
-  var json = JSON.parse(jsonstr);
-
-  document.getElementById("results").appendChild(
-        renderjson//.set_show_by_default(true)
-            //.set_show_to_level(2)
-            //.set_sort_objects(true)
-            .set_icons('+', '-')
-            .set_max_string_length(100)
-            (json)
-            );
-
-*/
 $(document).ready(function() {
   $('.collapse').on('shown.bs.collapse', function() {
     console.log('shown event...');
@@ -172,57 +169,44 @@ function exportCSVFile(specHeaders, items, fileTitle) {
 function getImageCount(sample_id) {
   var jobj = JSON.parse(image_map);
   var cnt = jobj[sample_id];
-  if (cnt === undefined)
+  if (cnt === undefined || cnt === null)
     cnt = 0;
   return cnt;
 }
 
-/** get a thumbnail cope of the slide images - need this to be sync call**/
-function getImageThumbnail(image_file) {
-  var request = new XMLHttpRequest();
-  var  url = openslide_url + "/get_image_thumbnail/" + image_file
+function getSlides(sample_id) {
+  var xhr = new XMLHttpRequest();
+  var  url = openslide_url + "/get_sample_images/" + sample_id
   var resp = ""
 
-  request.open('GET', url, false);  // `false` makes the request synchronous
-  request.send(null);
+  $(".image_list").empty();
+  //$(".image_list").fadeOut("slow");
+  $(".wait-img").fadeIn("slow");
 
-  if (request.status === 200) {
-    console.log(request.responseText);
-    resp = request.responseText;
-  }
-  return resp;
-}
+  xhr.open('GET', url);  // `false` makes the request synchronous
+  xhr.send()
 
-/* Get the slides names from the OpenSlide server and open an image gallery*/
-function getSlides(sample_id) {
-  var settings = {
-    "async": true,
-    "crossDomain": true,
-    "url": openslide_url + "/get_sample_images/" + sample_id,
-    "method": "GET",
-    "dataType": 'json',
-    "headers": {
-      "cache-control": "no-cache",
-      "postman-token": "f09e9396-bcd3-42dc-c28c-11ecd4aa1690"
-    }
-  }
+  xhr.onreadystatechange = function() {
 
-  $.ajax(settings).done(function (response) {
-    var element = document.getElementById("image_list");    
-    var images = response;
+  if (this.readyState == 4 && this.status == 200) {
+    var element = document.getElementById("image_list"); 
+    var images = JSON.parse(xhr.responseText);
     var html = ""
     var thumb = ""
+    console.log(images)
+    var count = images.images.length
 
-    if (images.images.length > 0) {
-      for (i=0; i < images.images.length; i++) {
+    if (count > 0) {
+      for (i=0; i < count; i++) {
 
-        thumb = getImageThumbnail(images.images[i])
-
-        href = openslide_url + "/" + images.images[i]
-        toks = images.images[i].split(".")
+        //thumb = getImageThumbnail(images.images[i])
+        image_name = images.images[i].name
+        thumbnail = images.images[i].thumb
+        href = openslide_url + "/" + image_name
+        toks = image_name.split(".")
         
         html += "<figure class=\"item\">"
-        html += "<a href=\"" + href + "\" target=\"_blank\"><img id=\"" + images.images[i] + "\" src=\"" + thumb + "\" width=\"50\" height=\"50\" align=\"center\"></a>";
+        html += "<a href=\"" + href + "\" target=\"_blank\"><img id=\"" + image_name + "\" src=\"" + thumbnail + "\"></a>";
         html +=  "<figcaption class=\"caption\">" + toks[0] + "</figcaption>"
         html += "</figure>"
       }
@@ -231,9 +215,13 @@ function getSlides(sample_id) {
       html = "No Slides are available for " + sample_id;
     }
     element.innerHTML = html;
-    $('#imagegallery').popup();  
-
-  });
+    $('#imagegallery').popup({
+    });  
+    // Animate loader off screen
+    $(".image_list").fadeIn("slow");
+    $(".wait-img").fadeOut("slow");
+  }
+}
 }
 
 $(document).ready(function() {
@@ -245,7 +233,6 @@ $(document).ready(function() {
   // Set default `pagecontainer` for all popups (optional, but recommended for screen readers and iOS*)
   $.fn.popup.defaults.pagecontainer = '#page'
 });
-
 
 </script>
 <span class="clinical-labels">{{search.result_total.value|intcomma}} cases found</span>
@@ -461,20 +448,20 @@ $(document).ready(function() {
             <td><span>{{sample.sample_info.tissue_type}}</span></td>
             <td><span>{{sample.sample_info.composition}}</span></td>            
             <td><span>{{sample.sample_info.preservation_method}}</span></td>
-            <td><button class="btn btn-secondary btn-sm" id="btn_{{sample.identifiers.bcr_sample_barcode}}" data-toggle="button" title="click to toggle portions panel" aria-pressed="false" autocomplete="off">({{sample.portion|length}})&nbsp;<i class="fas fa-list"></i></button></td>
+            <td><button class="btn btn-secondary btn-sm" id="btn_{{sample.identifiers.bcr_sample_uuid}}" data-toggle="button" title="click to toggle portions panel" aria-pressed="false" autocomplete="off">({{sample.portion|length}})&nbsp;<i class="fas fa-list"></i></button></td>
 
-            <td><input class="imagegallery_open btn btn-secondary btn-sm" id="btnimages_{{sample.identifiers.bcr_sample_barcode}}" type="button" onclick="getSlides('{{sample.identifiers.bcr_sample_barcode}}')" value="">&nbsp;<i class="fas fa-microscope"></i></input></td>          
+            <td><input class="imagegallery_open btn btn-secondary btn-sm" id="btnimages_{{sample.identifiers.bcr_sample_uuid}}" type="button" onclick="getSlides('{{sample.identifiers.bcr_sample_barcode}}')" value="">&nbsp;<i class="fas fa-microscope"></i></input></td>          
           </tr>   
             <script>
-                var elem = document.getElementById("btnimages_{{sample.identifiers.bcr_sample_barcode}}")
+                var elem = document.getElementById("btnimages_{{sample.identifiers.bcr_sample_uuid}}")
                 var imgcnt = getImageCount('{{sample.identifiers.bcr_sample_barcode}}')
                 elem.value = "(" + imgcnt.toString() + ")"
-                  $( "#btn_{{sample.identifiers.bcr_sample_barcode}}" ).click(function() {
-                    $( "#portions_{{sample.identifiers.bcr_sample_barcode}}" ).toggle("slow");
+                  $( "#btn_{{sample.identifiers.bcr_sample_uuid}}" ).click(function() {
+                    $( "#portions_{{sample.identifiers.bcr_sample_uuid}}" ).toggle("slow");
                   });
             </script>
           <td colspan="8" style="padding: 0px;">
-           <div id="portions_{{sample.identifiers.bcr_sample_barcode}}" style="display: none;"> <!--style="display: none;"-->
+           <div id="portions_{{sample.identifiers.bcr_sample_uuid}}" style="display: none;"> <!--style="display: none;"-->
               <div>
               {% for po in sample.portion %}
                 <span class="navbar navbar-dark" style="background-color: #A4A4A4; color: #FFFFFF; font-weight: bold;">{{po.identifiers.bcr_portion_barcode}} | #{{forloop.counter}}</span>
@@ -531,20 +518,15 @@ $(document).ready(function() {
 </div>
 {% endfor %}
 <div id="imagegallery">
+
   <div style="text-align:center">
     <h4 style="color: black;">Whole Slide Images</h4>
     <h2>Click on the image below to view slide</h2>
   </div>
-   <div id="image_list">
-    </div>
-<!--
-  <div class="htable">
-    <div id="image_list">
-    </div>
+  <div id="image_list">
   </div>
-
-    <img src="{{ search.img_str|safe }}">
--->    
+    <div class="wait-img" style="text-align:center">Loading slides...<img style="height: 128px;
+  width: 128px; border: none;" src="{% static 'img/Preloader_2.gif' %}"></div>
     <!-- Add content to the popup -->
     <!-- Add a button to close the popup (optional)     -->
     <p style="text-align:center; display:block;">
